# Apps

./: .gitignore  AGENTS.md  prompts.md
BotSaldos/: .env.example  .gitignore  AGENTS.md  README.md  file1.txt  pyproject.toml
BotSaldos/app/: __init__.py  check_setup.py  diagnose_santander_selenium.py  diagnose_santander_selenium_manual.py  diagnose_santander_xpath.py  main.py  playwright_login.py  playwright_smoke.py  reset_galicia_attempts.py  reset_santander_attempts.py  staging_write.py  update_sheet_headers.py
BotSaldos/app/core/: __init__.py  balance_state.py  config.py  execution_lock.py  logging_config.py  login_attempt_state.py  report_state.py
BotSaldos/docs/: galicia.md  mercadopago.md  playwright.md  santander.md  security.md  sheets_contract.md
BotSaldos/scripts/: check_playwright.sh  check_setup.sh  diagnose_santander_selenium.sh  diagnose_santander_selenium_manual.sh  diagnose_santander_xpath.sh  install_playwright_browsers.sh  install_staging_cron.sh  playwright_login.sh  reset_galicia_attempts.sh  reset_santander_attempts.sh  run_sync.sh  staging_write.sh  update_sheet_headers.sh
BotSaldos/tests/: prueba.py  test_api_client.py  test_balance_portal.py  test_balance_state.py  test_balance_sync_service.py  test_check_setup.py  test_config.py  test_diagnose_santander_selenium.py  test_galicia_selenium_client.py  test_login_attempt_state.py  test_mercadopago_api_client.py  test_santander_client.py  test_santander_selenium_client.py  test_selenium_client.py  test_sheet_contract.py  test_sheets_client.py  test_staging_write.py  test_web_client.py
hola mundo/: .env.example  .gitignore  POO.py  README.md  pyproject.toml
hola mundo/app/: __init__.py  config.py  main.py  schemas.py
hola mundo/tests/: test_config.py  test_main.py
(+18 files in other folders)
