[project]
name = "botsaldos"
version = "0.1.0"
description = "Automatizacion segura para actualizar saldos, ingresos y gastos en Google Sheets."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]
automation = [
    "playwright>=1.44",
    "httpx>=0.27",
    "gspread>=6.1",
    "google-auth>=2.29",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
