[project]
name = "botsaldos"
version = "0.1.0"
description = "Automatizacion segura para registrar cotizaciones del dolar en Google Sheets."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]
automation = [
    "selenium>=4.22",
    "gspread>=6.1",
    "google-auth>=2.29",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
